--- a/20210728/style.css
+++ b/20210728/style.css
@@ -2,4 +2,4 @@
         h3{color:purple}
         hr{border: 5px solid white}
         span{color: red}
-        * < tag < class < id < inline style < !important
+        /* < tag < class < id < inline style < !important */
