--- a/20210805_himedia/css/style.css
+++ b/20210805_himedia/css/style.css
@@ -56,4 +56,99 @@ div.visualWrap>div.visual>div.visualTxt{
 }
 div.visualWrap>div.visual>img{position: absolute;right: 0;top: 20px;}
 
+/* banner */
+.bannerWrap{width: 980px;margin: 0 auto;margin-bottom: 30px;}
+.bannerWrap li{float: left;width: calc(100%/5);
+                height: 196px;padding: 10px;padding-top: 15px;}
+.bannerWrap img{display: block;margin: 0 auto; margin-bottom: 10px;}
+.bannerWrap .txt{text-align: center;color: white;}
+.bannerWrap h3{font-size: 18px;margin-bottom: 5px;}
+.bannerWrap p{font-size: 14px;letter-spacing: -1px;}
+.bannerWrap li:nth-child(1){background:#7C99B9}
+.bannerWrap li:nth-child(2){background:#4F74A1}
+.bannerWrap li:nth-child(3){background:#4B8CE0}
+.bannerWrap li:nth-child(4){background:#3DB5F2}
+.bannerWrap li:nth-child(5){background:#95C8FF}
+
+
+
+/* content */
+.content{width: 980px;margin: 0 auto;margin-bottom: 25px;}
+.content li{float: left;width: 310px;margin-right: 25px;}
+.content li:last-child{margin-right: 0;}
+.content .txt{padding: 18px 16px;border: 1px solid #e5e5e5;
+                border-top: 0 none;}
+.content h3{font-size: 18px 14px;margin-bottom: 5px;}
+.content p{font-size: 14px;}
+.content img{display: block;}
+
+
+/* sec2st */
+.sec2st{width: 980px;margin: 0 auto;}
+.sec2st li{float: left;width: 310px;margin-right: 25px;
+            border: 1px solid #e5e5e5;
+            padding: 18px;position: relative;
+            overflow: hidden;}
+.sec2st li:last-child{margin-right: 0;}
+.sec2st .txt{width: 150px;position: relative;}
+.sec2st h3{font-size: 18px;margin-bottom: 13px;}
+.sec2st p{font-size: 14px;margin-bottom: 13px;}
+.sec2st a{font-size: 14px;color: #1c84ff;}
+.sec2st img{position: absolute;right: -40px;top: 2px;}
+
+/* sec3st */
+.sec3st{width: 980px;margin: 0 auto;}
+.sec3st li{float: left;width: 310px;margin-right: 25px;
+            border: 1px solid #e5e5e5;
+            padding: 18px;
+            /* position: relative;overflow: hidden;} */
+            background-repeat: no-repeat ;
+            background-position: 140px center;}
+
+.sec3st li:last-child{margin-right: 0;}
+.sec3st li:nth-child(1){background-image: url(../images/content_icon01.png);}
+.sec3st li:nth-child(2){background-image: url(../images/content_icon02.png);}
+.sec3st li:nth-child(3){background-image: url(../images/content_icon03.png);}
+
+.sec3st .txt{width: 150px;position: relative;}
+.sec3st h3{font-size: 18px;margin-bottom: 13px;}
+.sec3st p{font-size: 14px;margin-bottom: 13px;}
+.sec3st a{font-size: 14px;color: #1c84ff;}
+
+
+/* footer */
+footer#footer{background-color: #5E5E5E;}
+footer#footer>.footerWrap{background-color: #526f96; height: 46px;}
+footer#footer>.footerWrap>div.foot{
+    background-color: gray ;width: 980px; margin: 0 auto;height: 46px; }
+
+div.foot>.footmenu>ul>li{float: left;width: 150px;}
+div.foot>.footmenu>ul>li>a{
+    display: block;text-align: center;line-height: 26px;
+    height: :26px; padding: 10px 2px ; 
+    color: white; font-size: 12px;
+    position: relative;}
+
+    .footmenu>ul>li>a:after{
+        content: "";width: 1px;height: 10px;display: block;
+        background-color: white;
+        position: absolute;top: 20px;right: 0;}
+    .footmenu>ul>li:last-child>a:after{content: ""; display: none;} 
+    .footmenu>ul>li:first-child{text-align: left;}
+
+.foot>img{float: right; width: 55px;height: 46px; display: block;}
+
+.info{margin: 0 auto; W: 980px; background-color: #pink ; height: 200px;}
+.info>h3{width: 200px;height: 200px;float: left;}
+.info>.address{width: 800px;height: 200px; float: left;}
+
+
+
+
+
+
+/* common */
+.bgGray{background: #ccc !important;}
+
+
 
