--- a/css/reset.css
+++ b/css/reset.css
@@ -1,7 +1,17 @@
 @charset "utf-8";
-*{margin: 0;padding: 0; box-sizing: border-box;} 
-li{list-style: none;}
+
+*{margin: 0;padding: 0;}
+li{list-style:none}
+
+a{text-decoration:none;}
 a:link,a:visited{text-decoration: none; color: #000;}
 .clearfix:after{
-    content: "";clear: both;display: block;}
+	content: "";display: block;clear: both;}
 img{display: block}
+/*body{
+	background-color:orange;
+	background-image:url(../images/bg_grid.gif);
+}*/
+
+
+
