--- a/20210817_form/form_naver/css/style.css
+++ b/20210817_form/form_naver/css/style.css
@@ -66,21 +66,43 @@ p.radio>input:nth-child(2):checked ~ label.female{background: skyblue !important
                 text-align: center;
                 background: #f7f7f7;color: #757575;border-right: 1px solid #efefef;
                     }
-div#content .field.birth input{float: left;}
-div#content .field.birth .field-wall{float: left;
+
+div#content .field.birth input,
+div#content .field.confirm input {float: left;}
+
+div#content .field.birth .field-wall,
+div#content .field.confirm .field-wall
+                        {float: left;
                                     width: 0;height: 29px;
                                 border-right: 1px solid #cdcdcd;
                                 margin-top: 10px;text-indent: -9999px;}
-div#content .field.birth select{
-                            float: left;
+div#content .field.birth select,
+div#content .field.confirm select
+                        { float: left;
                             width: 110px;height: 29px;
                             border: 0 none;
                             line-height: 29px;margin-top: 10px;margin-left: 10px;
                             margin-right: 7px;font-size: 15px;
                             color: #757575; }
 
+ div#content .field.confirm .btn-click
+         {width: 99px;height: 31px; background: #fff;
+         border: 1px solid #dcdcdc;cursor: pointer;
+        position: absolute;right: 15px;top: 7px;}                           
+
+ div#content .btn-submit{
+            width: 100%;height: 59px;border: 1px solid #1fbc02;
+            background-image: url(../images/btn_join2.gif);
+            background-repeat: no-repeat;
+            background-color: #1fbc02;
+            background-position: 50% -3px ;
+            text-indent: -9999px;
+            cursor: pointer;
+        }
 /* common  클릭했을때 칸선택 사이즈 */
 .w458{width: 458px !important;}
+.w303{width: 303px !important;}
+.w202{width: 202px !important;}
 .w145{width: 145px !important;}
 .w130{width: 130px !important;}
    
